Fixed image path for grandmother picture

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     <main>
         <h2>About Me</h2>
         <p>Hello! My name is Amit Rizal. Welcome to my personal website where I share about myself, my background, and my interests.</p>
+
+        <!-- Adding the Grandmother Image with Corrected Path -->
+        <figure>
+            <img src="images/grandmother.jpg" alt="My Grandmother">
+            <figcaption>My grandmother, my role model.</figcaption>
+        </figure>
+
     </main>
 
     <footer>
