--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
         <h2>About Me</h2>
-        <p>Hello! My name is Amit Rizal. Welcome to my personal website where I share about myself, my background, and my interests.</p>
+        <p>My grandmother is 86 years old and has been a role model for everyone who knows her. She embodies resilience, wisdom, and strength, having lived through significant changes in society while upholding family values and traditions.</p>
 
         <!-- Adding the Grandmother Image with Corrected Path -->
         <figure>
