--- a/hobbies.html
+++ b/hobbies.html
@@ -21,12 +21,12 @@
     </nav>
 
     <main>
-        <h2>What I Love to Do</h2>
+        <h2>What She Love to Do</h2>
         <ul>
-            <li>Reading</li>
             <li>Cooking</li>
-            <li>Traveling</li>
-            <li>Coding</li>
+            <li>Watching Movies and Shows</li>
+            <li>Spending time with her Kids or Grand Kids</li>
+            <li>She enjoys Gardening</li>
         </ul>
     </main>
 
