--- a/about.html
+++ b/about.html
@@ -21,8 +21,8 @@
     </nav>
 
     <main>
-        <h2>My Background</h2>
-        <p>I am currently studying web development and building this site as part of my coursework.</p>
+        <h2>Her Background</h2>
+        <p>My grandmother's life is a remarkable story of resilience and strength. She was married at an early age, as was customary in her culture, and faced the challenges of starting a new life with grace and determination. Despite the difficulties, she embraced her responsibilities wholeheartedly. It wasn't until she was 19 years old that she got to experience the joy of traveling in a vehicle for the first time. Over the years, her spirit of curiosity and adventure led her to explore multiple countries, gaining wisdom and experiences that enriched her life. Tragically, she lost her husband when she was only 29 years old, yet she chose to remain unmarried, dedicating her life to her family and the values she cherished. Her unwavering spirit and dedication have made her a role model, inspiring everyone who has had the privilege of knowing her..</p>
     </main>
 
     <footer>
