--- a/hobbies.html
+++ b/hobbies.html
@@ -1,38 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Hobbies</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+h2>What She Love to Do</h2>
+        <section>
+            <h3>Reading</h3>
+          <p>She loves Reading as she think it allows her to explore different worlds and ideas. It fuels the imagination and gives knowledge about different cultures and experiences. It brings peace and relaxation.</p>
+        </section>
+        
+        <section>
+            <h3>Cooking</h3>
+            <p>As she is not able to cook now, but she thinks cooking is a way to express creativity and love. She used to enjoys experimenting with different recipes and flavors. It gives her joy to prepare delicious meals for the family and loved ones.</p>
+        </section>
+        
+        <section>
+            <h3>Traveling</h3>
+            <p>She has been to so many places and she thinks traveling opens up opportunities to explore new places and meet new people. She love the adventure and learning that comes with seeing the beauty of different parts of the world.</p>
+        </section>
 
-    <header>
-        <h1>Hobbies</h1>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="hobbies.html">Hobbies</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <h2>What She Love to Do</h2>
-        <ul>
-            <li>Cooking</li>
-            <li>Watching Movies and Shows</li>
-            <li>Spending time with her Kids or Grand Kids</li>
-            <li>She enjoys Gardening</li>
-        </ul>
+        <section>
+            <h3>Gardening</h3>
+            <p>Gardening has been what is keeping her occupied throughout the day. Gardening is one of her favorite hobbies. She belives that it brings peace, joy, and a connection to nature. She love spending time nurturing plants, growing vegetables, and taking care of flowers.</p>
+            <figure>
+                <img src="images/grandmother_gardening.jpg" alt="Gardening">
+                <figcaption>Enjoying time in the garden.</figcaption>
+            </figure>
+        </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 My BioSite. All rights reserved.</p>
+        <p>&copy; 2025 My BioSite. All rights reserved.</p>
     </footer>
 
 </body>
 </html>
+
