--- a/index.html
+++ b/index.html
@@ -21,11 +21,7 @@
     </nav>
 
     <main>
-<<<<<<< HEAD
-        <h2>About</h2>
-        <p>My grandmother is 86 years old and has been a role model for everyone who knows her. She embodies resilience, wisdom, and strength, having lived through significant changes in society while upholding family values and traditions.</p>
-=======
-
+        <h2>About My Grandmother</h2>
         <p>My grandmother is 86 years old and has been a role model for everyone who knows her. She embodies resilience, wisdom, and strength, having lived through significant changes in society while upholding family values and traditions.</p>
 
         <h3>Early Life & Marriage</h3>
@@ -37,19 +33,15 @@
         <h3>Strength & Resilience</h3>
         <p>Even at 86, she continues to inspire us with her unwavering spirit and wisdom. Her life story is a testament to the strength of women in Nepalese culture, where resilience and adaptability are crucial. She has faced hardships with a strong will, teaching us to approach life with patience and endurance.</p>
 
-        <h3>Final Thoughts</h3>
-        <p>My grandmother’s journey is not just a personal story but a reflection of the strength and perseverance of many women from her generation. Her dedication to family, hard work, and values will always remain an inspiration to me and those who have the privilege of knowing her.</p>
-
-        <!-- Adding the Grandmother Image -->
+        <h3>Family Picture</h3>
         <figure>
-            <img src="images/grandmother.jpg" alt="My Grandmother">
-            <figcaption>My grandmother, my role model.</figcaption>
+            <img src="images/family_1.jpg" alt="Family Picture">
+            <figcaption>My family, the core of my life.</figcaption>
         </figure>
-
     </main>
 
     <footer>
-        <p>&copy; 2024 My BioSite. All rights reserved.</p>
+        <p>&copy; 2025 My BioSite. All rights reserved.</p>
     </footer>
 
 </body>
